Updated changes for assets path.

--- a/src/app/layout/views/home/home.component.html
+++ b/src/app/layout/views/home/home.component.html
@@ -1,18 +1,18 @@
 <div class="container">
     <div class="top-left-container">
-        <a class="navbar-brand" href="javascript:void(0);"><img src="../../../../assets/images/logo.png"
+        <a class="navbar-brand" href="javascript:void(0);"><img src="assets/images/logo.png"
                 alt="openFinance"></a>
         <div class="left-title-box">
             <div class="heading">
                 <h2>We make it Super Simple</h2>
-                <span class="heading-bottom-line"><img src="../../../../assets/images/Line 3.svg"
+                <span class="heading-bottom-line"><img src="assets/images/Line 3.svg"
                         alt="heading-line"></span>
             </div>
             <div class="heading-img">
-                <img src="../../../../assets/images/collect_img-video.png" alt="">
+                <img src="assets/images/collect_img-video.png" alt="">
             </div>
             <div class="heading-bg-img">
-                <img src="../../../../assets/images/blob-small.svg">
+                <img src="assets/images/blob-small.svg">
             </div>
         </div>
     </div>
@@ -35,7 +35,7 @@
             </li>
         </ul>
         <div class="baner-chart">
-            <img src="../../../../assets/images/circle.svg">
+            <img src="assets/images/circle.svg">
         </div>
     </div>
 </div>
