Added design and html sturture for top container.

--- a/src/app/layout/views/home/home.component.html
+++ b/src/app/layout/views/home/home.component.html
@@ -1,12 +1,11 @@
 <div class="container">
+    <!-- Top Section - Left -->
     <div class="top-left-container">
-        <a class="navbar-brand" href="javascript:void(0);"><img src="assets/images/logo.png"
-                alt="openFinance"></a>
+        <a class="navbar-brand" href="javascript:void(0);"><img src="assets/images/logo.png" alt="openFinance"></a>
         <div class="left-title-box">
             <div class="heading">
-                <h2>We make it Super Simple</h2>
-                <span class="heading-bottom-line"><img src="assets/images/Line 3.svg"
-                        alt="heading-line"></span>
+                <span class="heading-title">We make it Super Simple</span>
+                <span class="heading-bottom-line"></span>
             </div>
             <div class="heading-img">
                 <img src="assets/images/collect_img-video.png" alt="">
@@ -14,28 +13,85 @@
             <div class="heading-bg-img">
                 <img src="assets/images/blob-small.svg">
             </div>
+            <div class="heading-bg-dotted-img">
+                <img src="assets/images/accounting_dots.svg">
+            </div>
         </div>
     </div>
-    <div class="top-right-container collapse navbar-collapse" id="head-navbar">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+
+    <!-- Top Section - Right -->
+    <div class="top-right-container collapse navbar-collapse">
+        <ul class="navbar-nav">
+            <li class="nav-item">
                 <a class="nav-link" href="javascript:void(0);">Products</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="javascript:void(0);">Solutions</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="javascript:void(0);">Pricing</a>
             </li>
-            <li class="nav-item active">
-                <button class="nav-link login-btn">Login</button>
+            <li class="nav-item">
+                <a class="nav-link login-btn" href="javascript:void(0);">Login</a>
             </li>
-            <li class="nav-item active">
-                <button class="nav-link get-started">Get Started</button>
+            <li class="nav-item">
+                <a class="nav-link get-started" href="javascript:void(0);">Get Started</a>
             </li>
         </ul>
+        <!-- Main Form -->
+        <div class="eligibility-calculator">
+            <img src="assets/images/Group 6.svg" alt="">
+        </div>
+
         <div class="baner-chart">
             <img src="assets/images/circle.svg">
         </div>
+        <div class="baner-chart-dotted-img">
+            <img src="assets/images/accounting_dots.svg">
+        </div>
     </div>
+
+    <!-- Bottom Section - Left -->
+    <!-- <div class="bottom-left-container">
+        <div class="btm-lf-1">
+            <div class="left-box-1">
+                <img src="assets/images/Rectangle Copy 23.svg" alt="Rectangle-Copy-23">
+                <span>Quick cash disbursement</span>
+                <p>Get terms loans that your business needs within 72 hrs</p>
+            </div>
+            <div class="left-box-2">
+                <img src="assets/images/Low interest rate.png" alt="Low-interest-rate">
+                <span>Low-interest rate</span>
+                <p>Achieve your financial goals with an amazing interest rate starting at 13% per annum</p>
+            </div>
+            <div class="left-box-3">
+                <img src="assets/images/Secure Payments.png" alt="Secure-Payments">
+                <span>Zero Paperwork</span>
+                <p>Get started instantly by submitting only your basic details & bank statements</p>
+            </div>
+        </div>
+        <div class="btm-lf-2">
+            <div class="right-box-1">
+                <img src="assets/images/freelancer_feature_icon_6@1.5x.png" alt="freelancer_feature_icon_6@1.5x">
+                <span>Ace your business finances</span>
+                <p>Manage banking, accounting & everything in between, on one platform</p>
+            </div>
+            <div class="right-box-2">
+                <img src="assets/images/Covid.png" alt="Covid">
+                <span>Loans to fight COVID-19</span>
+                <p>Zero EMI for first 3 months on Back-to-Business loans of upto 1 lakh</p>
+            </div>
+        </div>
+    </div> -->
+
+    <!-- Bottom Section - Right -->
+    <!-- <div class="bottom-right-container">
+        <div class="heading-div">
+            <h2>Boost your business with Open</h2>
+            <span class="btm-heading-line"></span>
+            <p>Get your hands on a term loan that’s crafted for your business</p>
+        </div>
+        <button class="open-account"><span>Get an Open Account</span></button>
+    </div> -->
+
 </div>
