--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 @font-face {
     font-family: "Montserrat-Regular";
@@ -15,11 +15,18 @@ body {
     opacity: 1;
 }
 
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
 @media (min-width: 768px) {
 
     body,
     html {
         height: 100%;
         overflow-x: hidden;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
     }
 }
