Added design for Eligibiity Calculater section.

--- a/src/app/layout/views/home/home.component.html
+++ b/src/app/layout/views/home/home.component.html
@@ -40,7 +40,79 @@
         </ul>
         <!-- Main Form -->
         <div class="eligibility-calculator">
-            <img src="assets/images/Group 6.svg" alt="">
+
+            <form>
+                <div class="price-range-slider">
+                    <div class="slider-heading">
+                        <span>Eligibility Calculator</span>
+                    </div>
+                    <div class="sliders-form">
+                        <div class="group-13">
+                            <label for="monthly-income">Monthly Income</label>
+                            <p class="price-selected">₹ 1,50,000</p>
+                            <div class="group-16">
+                                <div class="rectangle">
+                                    <div class="rectangle">
+                                        <span class="circle">
+                                            <span class="oval"></span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="price-range">
+                                <span class="minimum">₹ 1,00,000</span>
+                                <span class="maximum"> ₹ 3,00,000</span>
+                            </p>
+                        </div>
+                        <div class="group-14">
+                            <label for="">Monthly Expense</label>
+                            <p class="price-selected">₹ 50,000</p>
+                            <div class="group-16">
+                                <div class="rectangle">
+                                    <div class="rectangle">
+                                        <span class="circle">
+                                            <span class="oval"></span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="group-9">
+                            <label for="">Repayment Tenure</label>
+                            <select name="" id="">
+                                <option value="6">6 Months</option>
+                                <option value="1">1 Year</option>
+                                <option value="2">2 Years</option>
+                                <option value="3">3 Years</option>
+                                <option value="4">4 Years</option>
+                                <option value="5">5 Years</option>
+                            </select>
+                        </div>
+                        <div class="group-22">
+                            <label for="">Do you have any existing loans?</label>
+                            <input type="checkbox">
+                        </div>
+                        <div class="group-9">
+                            <label for="">EMI of existing loan (optional)</label>
+                            <input type="text" placeholder="₹ 15,000">
+                        </div>
+                    </div>
+                </div>
+                <div class="get-money-container">
+                    <div class="section-row">
+                        <label for="">Loan Amount</label>
+                        <span>₹ 1,00,000</span>
+                    </div>
+                    <div class="section-row">
+                        <label for="">Your EMI will be</label>
+                        <span>₹ 15,000</span>
+                    </div>
+                    <div class="section-row">
+                        <button>GET MONEY</button>
+                    </div>
+                </div>
+            </form>
+
         </div>
 
         <div class="baner-chart">
