Updated design of Eligibility Calculator section.

--- a/src/app/layout/views/home/home.component.html
+++ b/src/app/layout/views/home/home.component.html
@@ -79,7 +79,7 @@
                         </div>
                         <div class="group-9">
                             <label for="">Repayment Tenure</label>
-                            <select name="" id="">
+                            <select class="form_input_select" name="" id="">
                                 <option value="6">6 Months</option>
                                 <option value="1">1 Year</option>
                                 <option value="2">2 Years</option>
@@ -90,25 +90,29 @@
                         </div>
                         <div class="group-22">
                             <label for="">Do you have any existing loans?</label>
-                            <input type="checkbox">
+                            <input type="checkbox" class="cm-toggle">
                         </div>
                         <div class="group-9">
                             <label for="">EMI of existing loan (optional)</label>
-                            <input type="text" placeholder="₹ 15,000">
+                            <input type="text" class="form_input_select" placeholder="₹ 15,000" value="₹ 15,000">
                         </div>
                     </div>
                 </div>
                 <div class="get-money-container">
-                    <div class="section-row">
-                        <label for="">Loan Amount</label>
-                        <span>₹ 1,00,000</span>
-                    </div>
-                    <div class="section-row">
-                        <label for="">Your EMI will be</label>
-                        <span>₹ 15,000</span>
-                    </div>
-                    <div class="section-row">
-                        <button>GET MONEY</button>
+                    <div class="group-21">
+                        <div class="section-row">
+                            <label for="">Loan Amount</label>
+                            <span>₹ 1,00,000</span>
+                        </div>
+
+                        <div class="section-row">
+                            <label for="">Your EMI will be</label>
+                            <span>₹ 15,000</span>
+                        </div>
+
+                        <div class="section-row">
+                            <button><span>GET MONEY</span></button>
+                        </div>
                     </div>
                 </div>
             </form>
